fixes mailing-list-form on tablet-view

--- a/app/javascript/stylesheets/hitobito/_form.scss
+++ b/app/javascript/stylesheets/hitobito/_form.scss
@@ -458,15 +458,21 @@ li.form {
 }
 
 @media screen and (max-width: 768px) {
-.input-append-fix{
-  .input-append{
-    white-space: normal;
-    width:calc(100vw - 230px);
-    input{
-      width:60%;
+  .input-append-fix{
+    .input-append{
+      white-space: normal;
+      width:calc(100vw - 230px);
+      input{
+        width:60%;
+      }
     }
   }
 }
+
+@media screen and (min-width: 768px) and (max-width:980px) {
+  input.span6, textarea.span6 {
+    width: calc(100vw - 550px);
+  }
 }
 
 
